<resources>
    <string name="app_name">HWM Online Book Store</string>
    <string name="app_logo">App Logo</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="create_new_account">Create new account</string>
    <string name="footer_logo">Footer Logo</string>
    <string name="hwm_book_store">HWM Book Store</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="welcome_to_hwm_book_store">Welcome to HWM Book Store</string>
    <string name="browse_books">Browse Books</string>
    <string name="my_orders">My Orders</string>
    <string name="profile">Profile</string>
    <string name="add_book">Add Book</string>
    <string name="update_book_data">Update Book Data</string>
    <string name="view_orders">View Orders</string>
    <string name="show_password">show password</string>
    <string name="profile_avatar">profile avatar</string>
    <string name="search">search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_image">product image</string>
    <string name="manage_books">Manage Books</string>
    <!--    <string name="default_web_client_id">496469332936-piok4gg8e3lre49pf9qqgfoj79ro9b3i.apps.googleusercontent.com</string>-->
</resources>